switch to green theme and daily stats
